# bazel_rules_transmission

./: .bazelrc  MODULE.bazel  README.md
.github/workflows/: build.yml
